# lixiang_code_clone

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  README.md  _typos.toml  readme.txt  ruff.toml
codebuddy/ai_agents/: README.md  build_wheel.py  demo.env  pyproject.toml  pytest.ini
codebuddy/ai_agents/ai_agents/: config.py
codebuddy/ai_agents/ai_agents/core/: __init__.py  model_manager.py  model_types.py  runtime.py  tools.py
codebuddy/ai_agents/ai_agents/lib/: dynamic_import.py  litellm_retry.py  rich_console.py  tracing.py
codebuddy/ai_agents/ai_agents/llmtools/: __init__.py  intent_classifier.py
codebuddy/ai_agents/ai_agents/micro_agents/: README.md  __init__.py  base_micro_agent.py  search_agent.py  yaml_agent_factory.py
codebuddy/ai_agents/ai_agents/sop_workflows/: README.md  sop_manager.py
codebuddy/ai_agents/ai_agents/supervisor_agents/: __init__.py  base_supervisor_agent.py
codebuddy/ai_agents/ai_agents/telemetry/: __init__.py  collector.py  data_store.py  error_handler.py  instrumentation.py  manager.py  remote_sender.py  types.py
codebuddy/ai_agents/ai_agents/tools/: __init__.py
codebuddy/ai_agents/benchmark/swebench/: README.md  swebench.py  swebench_prepare.py
codebuddy/ai_agents/clis/haloos_unit_test/: cli.py
codebuddy/ai_agents/clis/simple/: __init__.py  cli.py
codebuddy/ai_agents/clis/swebench/: README.md  cli.py
codebuddy/ai_agents/clis/testcase_common_utils/: __init__.py  common_cli.py  haloos_cli.py  haloos_unit_test_demo.py
codebuddy/ai_agents/deploy/: Dockerfile-agent-tars  build_artifacts.sh
codebuddy/ai_agents/docs/: add_new_agent_app.md  hooks.md  sop_agents.md  telemetry.md
codebuddy/ai_agents/examples/: __init__.py  hook_api_example.py  static_detection_repair.py  static_detection_repair.sh
codebuddy/ai_agents/tests/: README.md  conftest.py  test_config.py
codebuddy/ai_agents/tests/core/: test_config_fallback_simple.py  test_llm_connection.py  test_model_config.py  test_model_manager.py
codebuddy/ai_agents/tests/lib/: test_dynamic_import.py  test_merge_path.py  test_smolagents.py  test_sub_task_tracked_agent.py  test_task_tracing.py
codebuddy/ai_agents/tests/llmtools/: __init__.py  test_intent_classifier.py
codebuddy/ai_agents/tests/micro_agents/: __init__.py  test_base_micro_agent.py  test_code_editor_agent.py  test_search_agent.py
codebuddy/ai_agents/tests/modules/: test_feishuproject.py
codebuddy/ai_agents/tests/sop_workflows/: test_sop_manager.py
codebuddy/ai_agents/tests/telemetry/: test_collector.py  test_data_store.py  test_error_handling.py  test_instrumentation.py  test_manager.py  test_micro_agent_integration.py  test_supervisor_integration.py  test_types.py
codebuddy/ai_agents/tests/tools/: test_text_grep.py
codebuddy/copilot_dashboard_analysis/: .gitignore  README.md  demo.env  pyproject.toml
codebuddy/copilot_dashboard_analysis/copilot_dashboard_analysis/: ai_code_ratio.ipynb  ai_code_ratio.py  config.py  week_report.ipynb  week_report.py
codebuddy/copilot_dashboard_analysis/copilot_dashboard_analysis/sqls/: ai_code_ratio.py  sr_events.py
codebuddy/inference_server/: .gitignore  README.md  main.py  pyproject.toml  pytest.ini
codebuddy/inference_server/benchmark/: benchmark.py  dummy_tokenizer.py  ipython.py  show_result.py
codebuddy/inference_server/conf/: chat.json  config.json  ct2.json  fulledit.json  outdated.json  sglang.json  test.json
codebuddy/inference_server/evals/regressions/: postfix.py
codebuddy/inference_server/inference_server/: const.py  envs.py
codebuddy/inference_server/inference_server/backend/: __init__.py
codebuddy/inference_server/inference_server/config/: __init__.py  features.py  load.py
codebuddy/inference_server/inference_server/data/: __init__.py  starrocks.py
codebuddy/inference_server/inference_server/evalhelper/: report.py
codebuddy/inference_server/inference_server/externalservice/: __init__.py  codebuddy_fe.py  ep_lpai_service.py  test_codebuddy_fe.py  test_ep_lpai_service.py
codebuddy/inference_server/inference_server/lang/: __init__.py  language.py  stopwords.py
codebuddy/inference_server/inference_server/server/: __init__.py  apis.py  register.py  request.py  response.py  types.py  zed_api.py
codebuddy/inference_server/inference_server/telemetry/: __init__.py  event.py
codebuddy/inference_server/inference_server/testhelper/: __init__.py  random_words.py  reproduce.py  test_random_words.py
codebuddy/inference_server/inference_server/tokenizer/: __init__.py  codellama_decoder.py
codebuddy/inference_server/inference_server/types/: __init__.py  benchmark.py  chat_output.py  completion.py  output.py  output_stat.py  runtime.py  usage.py
codebuddy/inference_server/inference_server/utils/: __init__.py  ipython.py  log.py  lpai.py  number.py  strings.py  test_lpai.py  tokenizer.py
codebuddy/inference_server/scripts/: start.sh
codebuddy/inference_server/tests/: test_base_model.py
codebuddy/inference_server/tests/ipython/: reproduce_case.py  test_instance.py
codebuddy/inference_server/tests/models/: test_zed.py
codebuddy/llminfer_rs/: Cargo.toml  README.md  pyproject.toml
codebuddy/llminfer_rs/.cargo/: config.toml
codebuddy/llminfer_rs/crates/diff/: Cargo.toml  README.md
codebuddy/llminfer_rs/crates/python/: Cargo.toml
codebuddy/llminfer_rs/tests/: test_stream_next_chunk.py
codebuddy/rag_ingest/: .gitignore  README.md  demo.env  pyproject.toml  staging.env
codebuddy/rag_ingest/rag_ingest/: envs.py  language.py  language.yaml  query.py  state.py
codebuddy/rag_ingest/tests/: test_ingest.py  test_ingest_repos.py  test_prompts.py  test_query.py  test_state.py  test_store.py
codebuddy/repotools/: .style.yapf  README.md  pyproject.toml
codebuddy/repotools/repotools/: envs.py
codebuddy/repotools/tests/: test_language.py
data/data_scrap/: README.md  pyproject.toml
data/data_scrap/data_scrap/: config.py
data/data_scrap/deploy/: Dockerfile-gerrit-scrap  ubuntu2204.sourcelist
op/opcli/: README.md  demo.env  pyproject.toml
op/opcli/opcli/: __init__.py  config.py
op/opcli/opcli/cli/: __init__.py  (+2 more)
(+435 files in other folders)
