[project]
name = "copilot-dashboard-analysis"
version = "0.1.0"
description = "analysis"
readme = "README.md"
authors = [
    { name = "Xudong Zhang", email = "zhangxudong@lixiang.com" }
]
requires-python = ">=3.10"
dependencies = [
    "arrow>=1.3.0",
    "datautils",
    "ipykernel>=6.29.5",
    "jupyterlab>=4.3.4",
    "mysql-connector-python>=9.1.0",
    "pandas>=2.2.3",
    "pyarrow>=18.1.0",
    "sqlalchemy>=2.0.36",
    "sysutils",
]

[[tool.uv.index]]
url = "https://artifactory.ep.chehejia.com/artifactory/api/pypi/pypi-remote/simple"
default = true

[tool.uv.sources]
datautils = { path = "../../packages/datautils", editable = true }
sysutils = { path = "../../packages/sysutils", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]

[tool.pytest.ini_options]
log_cli = "true"
log_cli_level = "DEBUG"
testpaths = ["tests"]
