
[workspace]
members = [
  "crates/diff",
  "crates/python",
]
resolver = "2"

[profile.dev]
incremental = true
debug = true
codegen-units = 256

[profile.dev.package]

[profile.release]
incremental = true
debug = 0

[workspace.package]
edition = "2021"
version = "0.3.0"
license = "Private"
homepage = "https://gitlab.chehejia.com/ep/ai/code-complete"
repository = "https://gitlab.chehejia.com/ep/ai/code-complete"
description = "Copilot Rust Tools"
authors = [
  "LiAuto EP Team"
]

[workspace.dependencies]
anyhow = "1"
backtrace = "0.3"
derive_builder = "0.20"
futures = "0.3.30"
imara-diff = "0.1.8"
log = { version = "0.4.22", features = ["serde", "kv_unstable_serde", "kv_unstable_std"] }
lru = { version = "0.12.5", default-features = false }
once_cell = "1.18"
pyo3 = { version = "0.24.2", features = ["extension-module", "abi3-py310"] }
rand = "0.8"
regex = "1"
similar = "2.7.0"
thiserror = "1.0.59"
tracing = "0.1"
tracing-appender = "0.2"
tracing-core = "0.1"
tracing-log = { version = "0.2", default-features = false, features = ["std"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
