[project]
name = "repotools"
version = "0.1.0"
description = "repo tools (rag and others)"
readme = "README.md"
authors = [
    { name = "Xudong Zhang", email = "zhangxudong@lixiang.com" }
]
requires-python = ">=3.10"
dependencies = [
    "sysutils",
    "toml>=0.10.2",
    "tree-sitter>=0.23.0",
    "tree-sitter-c>=0.21.4",
    "tree-sitter-python>=0.23.0",
]

[[tool.uv.index]]
# url = "https://mirrors.aliyun.com/pypi/simple"
url = "https://artifactory.ep.chehejia.com/artifactory/api/pypi/pypi-remote/simple"
default = true

[tool.uv.sources]
sysutils = { path = "../../packages/sysutils", editable = true }


[tool.pytest.ini_options]
log_cli = "true"
log_cli_level = "DEBUG"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.wheel]
packages = ['repotools']
