[project]
name = "opcli"
version = "0.0.1"
description = "operation cli"
readme = "README.md"
classifiers = ["Private :: Do Not Upload"]
requires-python = "==3.12.8"
dependencies = [
    "gitpython>=3.1.44",
    "chardet>=5.0.0",
    "click>=8.1.0",
    "tenacity>=9.1.2", #这是个retry的包，litellm 的 retry 逻辑依赖这个
    "arrow>=1.3.0",
    "packaging>=24.2",
    "ruamel-yaml>=0.18.10", # packages/commonlibs/commonlibs/encoding/xyaml.py内依赖
    "requests>=2.31.0",
    "lark-oapi>=1.4.23",
]

[project.scripts]
opcli = "opcli.cli.main:main"


[[tool.uv.index]]
url = "https://artifactory.ep.chehejia.com/artifactory/api/pypi/pypi-remote/simple"
default = true

[[tool.uv.index]]
name = "liauto"
url = "https://artifactory.ep.chehejia.com/artifactory/api/pypi/liauto-pypi-l5/simple"
publish-url = "https://artifactory.ep.chehejia.com/artifactory/api/pypi/liauto-pypi-l5"
explicit = true

[tool.uv.sources]
externalapis = { path = "../../packages/externalapis", editable = true }
sysutils = { path = "../../packages/sysutils", editable = true }
commonlibs = { path = "../../packages/commonlibs", editable = true }
repoutils = { path = "../../packages/repoutils", editable = true }

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "DEBUG"
testpaths = ["tests"]
markers = [
    "integration: marks tests as integration tests that use real LLM API calls (deselect with '-m \"not integration\"')",
    "e2e: marks tests as end-to-end tests that require real CLI tools (deselect with '-m \"not e2e\"')",
]
# avoid run integrations by default since it is slow and cost money
addopts = "-m 'not integration'"

[tool.ruff.lint.isort]
known-first-party = ["opcli"]
known-third-party = ["commonlibs", "externalapis", "repoutils", "sysutils"]


[dependency-groups]
dev = [
    "commonlibs",
    "externalapis",
    "repoutils",
    "sysutils",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.26.0",
    "responses>=0.25.0",  # For HTTP request mocking in tests
]
eval = []

[build-system]
# requires = ["hatchling"]
# build-backend = "hatchling.build"
requires = ["uv_build>=0.9.6,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "opcli"
module-root = ""

[tool.hatch.build.targets.wheel]
packages = ["opcli"]
