[package]
name = "diff"
authors.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[lib]
name = "diff"

[dependencies]
log = { workspace = true }
lru = { workspace = true }
once_cell = { workspace = true }
tracing = { workspace = true }
similar = { workspace = true }
imara-diff = { workspace = true }

pyo3 = { workspace = true, features = ["extension-module", "abi3-py310"] }


[dev-dependencies]
